# VibeTube

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.md  DEV_RUN.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml  vibetube-server.spec
.github/workflows/: build-windows.yml  release.yml
app/: index.html  package.json
app/src/: App.tsx  global.d.ts  index.css  main.tsx
backend/: README.md  __init__.py  app_factory.py  build_binary.py  config.py  database.py  export_import.py  history.py  lifecycle.py  main.py  migrate_add_instruct.py  models.py  profiles.py  requirements.txt  server.py  stories.py  transcribe.py  tts.py  vibetube-server.spec  vibetube.py
backend/backends/: __init__.py  base.py  chatterbox_backend.py  chatterbox_turbo_backend.py  luxtts_backend.py  mlx_backend.py  pytorch_backend.py
backend/db/: __init__.py  migrations.py  models.py  session.py
backend/routes/: channels.py  generation.py  history.py  model_management.py  profiles.py  runtime.py  stories.py  system.py  vibetube.py  vibetube_profiles.py
backend/services/: errors.py  generation.py  history.py  model_management.py  profiles.py  stories.py  uploads.py
backend/tests/: test_broadcast_render.py  test_generation_download.py  test_model_management.py  test_model_registry.py  (+3 more)
docs/: AUTOUPDATER.md  AUTOUPDATER_QUICKSTART.md
legacy_cli/: .gitignore  README.md  THIRD_PARTY_NOTICES.md
scripts/: build-server.js  build-server.sh  prepare-release.sh  setup-dev-sidecar.js
src/: __init__.py
tauri/: index.html  package.json
web/: package.json
(+108 files in other folders)
